# descriptor-api

./: .gitignore  README.md  image_describer.py  main.py  models.py  pyproject.toml
